Bug 545168 - [12] NPE in BreakStatement.analyseCode